--- a/Model/Yaml/Cx.Modules.TodoManager.Model.Entity.Todo.dcm.yml
+++ b/Model/Yaml/Cx.Modules.TodoManager.Model.Entity.Todo.dcm.yml
@@ -2,6 +2,10 @@ Cx\Modules\TodoManager\Model\Entity\Todo:
   type: entity
   table: module_todomanager_todo
   repositoryClass: Cx\Modules\TodoManager\Model\Repository\TodoRepository
+  gedmo:
+    translation:
+      locale: locale
+      entity: Cx\Core\Locale\Model\Entity\Translation
   indexes:
     fk_module_todomanager_todo_module_todomanager_category_idx:
       columns: [ category_id ]
@@ -16,8 +20,12 @@ Cx\Modules\TodoManager\Model\Entity\Todo:
     name:
       type: string
       length: 50
+      gedmo:
+        - translatable
     description:
       type: text
+      gedmo:
+        - translatable
     reminderDate:
       type: datetime
       nullable: true
